--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+           <dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>2.2</version>
+</dependency>
+           
     <dependency>
       <groupId>org.powermock</groupId>
       <artifactId>powermock-module-junit4</artifactId>
