--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,7 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-           <dependency>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-war-plugin</artifactId>
-    <version>2.2</version>
-</dependency>
+      
            
     <dependency>
       <groupId>org.powermock</groupId>
@@ -58,6 +54,11 @@
 
   <build>
     <plugins>
+  <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>2.2</version>
+</plugin>
       <plugin>
         <!-- Configures the compiler. -->
         <groupId>org.apache.maven.plugins</groupId>
