--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,20 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-      
-           
+            
     <dependency>
       <groupId>org.powermock</groupId>
       <artifactId>powermock-module-junit4</artifactId>
       <version>1.5.1</version>
       <scope>test</scope>
     </dependency>
+     
+           <dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>2.6</version>
+     </dependency>
+           
     <dependency>
       <groupId>org.powermock</groupId>
       <artifactId>powermock-api-mockito</artifactId>
