--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 			<url>http://localhost:8999/manager/text</url>
 			<server>localhost</server>
 			<warFile>target/java-maven-junit-helloworld-1.0-SNAPSHOT.war</warFile>
-			<path>/target</path>
+			<path>/helloWorld</path>
 			<contextReloadable>true</contextReloadable>
 			<username>admin</username>
 			<password>admin</password>
