--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
 		<artifactId>tomcat7-maven-plugin</artifactId>
 		<version>2.2</version>
 		<configuration>
-			<url>http://localhost:8999/manager/html</url>
+			<url>http://localhost:8999</url>
 			<server>localhost</server>
 			<warFile>target/java-maven-junit-helloworld-1.0-SNAPSHOT.war</warFile>
 			<path>/helloWorld</path>
